--- a/sub/app/assets/stylesheets/application.css
+++ b/sub/app/assets/stylesheets/application.css
@@ -14,11 +14,12 @@
 
 .bgimg { border:0px; width:100%; height:100%;}
 .bgscroll{
-width:100%;
-height:100%;
-z-index:-1;
-position:fixed;
-_position:absolute;
-right:0px;
-clip:rect(0 100% 100% 0);
+  width:100%;
+  height:100%;
+  z-index:-1;
+  position:fixed;
+  _position:absolute;
+  top:0;
+  right:0;
+  clip:rect(0 100% 100% 0);
 }
