--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -8,16 +8,89 @@
 <meta name="author" content="Kejian.TV" />
 <meta name="copyright" content="<%= Time.now.year %> Kejian.TV Ltd." />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-<%= stylesheet_link_tag    "application", :media => "all" %>
+<meta http-equiv="imagetoolbar" content="no" />
+<%= stylesheet_link_tag "application", :media => "all" %>
 <%= csrf_meta_tags %>
 </head>
 
 <body>
+<div class='bgscroll' id="ktv_bg_container">
+</div>
+
+<div id="append_parent"></div>
+<div id="ajaxwaitid"></div>
+
+<div id="wrap">
+<div id="wrapper">
+
+<div id="header">
+ <div class="headtop">
+      <div class="logo">
+      <center><a href="/"><img src="<%= asset_path 'logo_cnu.png' %>" alt="首都师范大学课件交流系统"></a></center>
+      </div>
+  </div>
+
+
+
+  <div class="menu_out">
+      <div class="menu_in" id="navmenu"> 
+          <div class="menu" id="navmenu"><ul>
+<li class="first"><a class="now" href="www.ttmeiju.com/"><span>首页</span></a></li>
+           <li><a href="www.ttmeiju.com/weekcalendar.html"><span>周历</span></a></li>
+           <li><a href="www.ttmeiju.com/countdown.html"><span>回归倒计时</span></a></li>
+           <li><a href="www.ttmeiju.com/summary.html"><span>美剧排行榜</span></a></li>
+           <li><a href="bbs.ttmeiju.com/forum-49-1.html"><span>站长留言</span></a></li>
+           <li><a href="bbs.ttmeiju.com" title="论坛" target="_blank"><span>论坛</span></a></li>
+           <li><a href="/about" title="关于我们"><span>关于我们</span></a></li>
+</ul>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!--header end-->
+
 <%= yield %>
+
+<div id="footer">
+<div id="footer_top">
+<p class="good_link">
+<a href="www.ttmeiju.com/index.php">首都师范大学课件交流系统</a> | 
+<a href="www.ttmeiju.com/?action-site-type-map">站点地图</a> | 
+<a href="www.ttmeiju.com/?action-site-type-link">友情链接</a>
+<span style="float:right;margin-right:20px"><a href="#">背景图为<%= $cnu_fotos[@bg_index] %>.</a></span>
+</p>
+</div>
+<div class="copyright">
+<p id="copyright">
+版权所有 <a href="kejian.tv">Kejian.TV</a> &copy; <%= Time.now.year %> 课件交流系统. 课件著作权为原作者所有
+        </p>
+<p></p>
+</div>
+
+</div><!--footer end-->
+</div></div>
+
 <%= javascript_include_tag "application" %>
 <script type="text/javascript" charset="utf-8">
   jQuery(function(){
     <%= yield :butt2 %>
+    window.psvr_bgImg = new Image();
+    window.psvr_bgImg.onload = function() {
+      jQuery.extend(window.psvr_kina, {
+          psvr_height: window.psvr_bgImg.height,
+          psvr_width: window.psvr_bgImg.width
+      });
+      jQuery(window.psvr_bgImg).addClass('bgimg');
+      jQuery(window.psvr_bgImg).attr('id','ktv_bg');
+      jQuery(window.psvr_bgImg).attr('alt',<%=raw $cnu_fotos[@bg_index].to_json %>);
+      jQuery('#ktv_bg_container').prepend(window.psvr_bgImg);
+      jQuery.extend(window.psvr_kina, {
+          bg: jQuery('#ktv_bg')[0],
+          timer: setInterval(window.psvr_kina.fix, 200)
+      });
+    };
+    window.psvr_bgImg.src = <%= raw asset_path("cnu_foto/#{@bg_index}.jpg").to_json %>;
   });
 </script>
 <%= yield :butt %>
