一些只有子站点才有的DZ表

--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
     <div class="content" style="">
         <div class="contentbox">
                 <div class="div_1">
-                    <div class="hd"><h3>今日更新（周一）</h3><span class="moreimg"><a href="www.ttmeiju.com/?action-weekcalendar#z1"><img src="<%= asset_path 'extand_images/more.gif' %>" alt="查看更多"></a></span></div>
+                    <div class="hd"><h3>课件 TOP 10 （三日内）</h3><span class="moreimg"><a href="www.ttmeiju.com/?action-weekcalendar#z1"><img src="<%= asset_path 'extand_images/more.gif' %>" alt="查看更多"></a></span></div>
                     <div class="bd">
                         <ul class="meijulist"><!--meiju_new10-->
                         
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="div_2">
-                    <div class="hd"><h3>课件 TOP 10 （三日内）</h3></div>
+                    <div class="hd"><h3>最热课程榜</h3></div>
                     <div class="bd">
                         <ul class="seedlist"><!--seed_top10-->
                  
