--- a/sub/app/views/courses/index.html.erb
+++ b/sub/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
-<div id="midder">
-    <div class="content" style="">
-        <div class="contentbox">
-            <table class="seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
+<div id="psvr_midder">
+    <div class="psvr_content" style="">
+        <div class="psvr_contentbox">
+            <table class="psvr_seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
               <tr bgcolor="#f1f1f1">
                 <td height="28" colspan="8" align="left"><h3><%=kaixue_msg%>，这学期首都师范大学共开设了<%=Course.count%>门课</h3></td>
               </tr>
