页头感觉好多了，差therapy2，先吃饭

--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     document.write('<style type=\"text\/css\">'+fdcCSS+'<\/style>');
   </script>
 
-<div class="psvr_bgscroll" id="psvr_ktv_bg_container">
+<div class="psvr_bgscroll" id="ktv_bg_container">
 </div>
 
 <div id="psvr_append_parent"></div>
@@ -46,7 +46,7 @@
 <div id="psvr_header">
  <div class="psvr_headtop">
       <div class="psvr_logo">
-        <a href="/"><img src="<%= asset_path 'logo_cnu.png' %>" alt="首都师范大学课件交流系统"></a>
+        <a href="/"><img src="<%= asset_path 'logo_cnu.png' %>" alt="首都师范大学课件交流系统" id="psvr_logimg"></a>
       </div>
   </div>
 
