头尾部露出背景

--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -113,6 +113,7 @@
       });
     };
     window.psvr_bgImg.src = <%= raw asset_path("cnu_foto/#{@bg_index}.jpg").to_json %>;
+    //jQuery('body').css('padding-bottom',jQuery(window).height()/2);
   });
 </script>
 <%= yield :butt %>
