--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -2,26 +2,26 @@
     <div class="psvr_content" style="">
         <div class="psvr_contentbox">
                 <div class="psvr_div_1">
-                  <div class="psvr_hd"><h3>课程资源榜</h3><span class="psvr_moreimg"><a href="<%=courses_path%>"><img src="<%= asset_path 'extand_images/more.gif' %>" alt="查看更多"></a></span></div>
+                  <div class="psvr_hd"><h3 class="psvr" >课程资源榜</h3><span class="psvr psvr_moreimg"><a class="psvr" href="<%=courses_path%>"><img class="psvr" src="<%= asset_path 'extand_images/more.gif' %>" alt="查看更多"></a></span></div>
                     <div class="psvr_bd">
-                        <ul class="psvr_meijulist"><!--meiju_new10-->
+                        <ul class="psvr psvr_meijulist"><!--meiju_new10-->
                         
                             <%@courses.each do |course|%>
                               <%cc=Course.where(fid:course.fid).first%>
-                              <li><span class="psvr_newstime"><%=course.threads%>个课件</span>[<a href="/simple/forum.php?mod=forumdisplay&fid=<%=course.fid%>"><%=cc.department%></a>] <a href="/simple/forum.php?mod=forumdisplay&fid=<%=course.fid%>"><%=cc.name%></a></li>
+                              <li class="psvr" ><span class="psvr psvr_newstime"><%=course.threads%>个课件</span>[<a class="psvr" href="/simple/forum.php?mod=forumdisplay&fid=<%=course.fid%>"><%=cc.department%></a>] <a class="psvr" href="/simple/forum.php?mod=forumdisplay&fid=<%=course.fid%>"><%=cc.name%></a></li>
                             <%end%> 
 
                         </ul>
                     </div>
                 </div>
                 <div class="psvr_div_2">
-                    <div class="psvr_hd"><h3>课件 TOP-10</h3></div>
+                    <div class="psvr_hd"><h3 class="psvr" >课件 TOP-10</h3></div>
                     <div class="psvr_bd">
-                        <ul class="psvr_seedlist"><!--seed_top10-->
+                        <ul class="psvr psvr_seedlist"><!--seed_top10-->
 
                         <%@coursewares.each do |cw|%>
-                          <li class="psvr_top1"><span class="psvr_newstime">点击量:<%=cw.views%></span>
-                          <a href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
+                          <li class="psvr psvr_top1"><span class="psvr psvr_newstime">点击量:<%=cw.views%></span>
+                          <a class="psvr" href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
                             <%=cw.subject%>
                          </a></li>
                        <%end%>
@@ -33,7 +33,7 @@
         <div class="psvr_contentbox">
             <table class="psvr_seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
               <tr bgcolor="#f1f1f1">
-                <td height="28" colspan="8" align="left"><h3><%=l Date.today, :format => :long%> 更新</h3></td>
+                <td height="28" colspan="8" align="left"><h3 class="psvr" ><%=l Date.today, :format => :long%> 更新</h3></td>
               </tr>
               <tr bgcolor="#fafafa" align="center">
                 <td width="5%" align="center">序号</td>
@@ -56,15 +56,15 @@
                <td><%=index+1%></td>
                <td align="left">
                  <%if teacher%>
-                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}"%>]
+                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}",class:'psvr'%>]
                  <%end%>
-                 <a href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
+                 <a class="psvr" href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
                     <%=cc.name%><%=cw.subject%>
                 </a></td>
                 <td><%=number_to_human_size(ins.filesize*1000,:precision=>1) if ins%></td>
                 <td><%=ins.sort.upcase if ins%></td>
                 <td>  
-                  <a href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
+                  <a class="psvr" href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
                   <%=cw.author%> 
                   </a>
                 </td>
@@ -80,7 +80,7 @@
         <div class="psvr_contentbox">
             <table class="psvr_seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
               <tr bgcolor="#f1f1f1">
-                <td height="28" colspan="8" align="left"><h3><%=l Time.at(@coursewares2.first.dateline).to_date, :format => :long%> 更新</h3></td>
+                <td height="28" colspan="8" align="left"><h3 class="psvr" ><%=l Time.at(@coursewares2.first.dateline).to_date, :format => :long%> 更新</h3></td>
               </tr>
               <tr bgcolor="#fafafa" align="center">
                 <td width="5%" align="center">序号</td>
@@ -103,15 +103,15 @@
                <td><%=index+1%></td>
                <td align="left">
                  <%if teacher%>
-                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}"%>]
+                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}",class:'psvr'%>]
                  <%end%>
-                 <a href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
+                 <a class="psvr" href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
                     <%=cc.name%><%=cw.subject%>
                 </a></td>
                 <td><%=number_to_human_size(ins.filesize*1000,:precision=>1) if ins%></td>
                 <td><%=ins.sort.upcase if ins%></td>
                 <td>  
-                  <a href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
+                  <a class="psvr" href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
                   <%=cw.author%> 
                   </a>
                 </td>
@@ -129,7 +129,7 @@
         <div class="psvr_contentbox">
             <table class="psvr_seedtable" border="0" align="center" cellpadding="1" cellspacing="1" bgcolor="#cccccc" width="100%">
               <tr bgcolor="#f1f1f1">
-                <td height="28" colspan="8" align="left"><h3><%=l Time.at(@coursewares3.first.dateline).to_date, :format => :long%> 更新</h3></td>
+                <td height="28" colspan="8" align="left"><h3 class="psvr" ><%=l Time.at(@coursewares3.first.dateline).to_date, :format => :long%> 更新</h3></td>
               </tr>
               <tr bgcolor="#fafafa" align="center">
                 <td width="5%" align="center">序号</td>
@@ -152,15 +152,15 @@
                <td><%=index+1%></td>
                <td align="left">
                  <%if teacher%>
-                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}"%>]
+                   [<%=link_to teacher.name,"/simple/forum.php?mod=forumdisplay&fid=#{cw.fid}&filter=typeid&typeid=#{cw.typeid}",class:'psvr'%>]
                  <%end%>
-                 <a href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
+                 <a class="psvr" href="/simple/forum.php?mod=viewthread&tid=<%=cw.tid%>">
                     <%=cc.name%><%=cw.subject%>
                 </a></td>
                 <td><%=number_to_human_size(ins.filesize*1000,:precision=>1) if ins%></td>
                 <td><%=ins.sort.upcase if ins%></td>
                 <td>  
-                  <a href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
+                  <a class="psvr" href="/simple/home.php?mod=space&uid=<%=cw.authorid%>&do=profile">
                   <%=cw.author%> 
                   </a>
                 </td>
