--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -1,26 +1,25 @@
-* {margin:0;padding:0}
-body {
+.psvr * {margin:0;padding:0}
+.psvr {
 font-size: 12px;font-family:Arial;text-align:center;line-height:22px;color: #555;
 padding:18px 0;
 }
-a { color:#013155; text-decoration: none;}
-a:link {color: #013155;text-decoration: none;}
-a:visited {color: #013155;text-decoration: none;}
-a:hover {color: #ff8800;text-decoration: none;}
-a:active {color: #0000FF;text-decoration: none;}
-img {vertical-align: middle;border: 0px;}
-ul {list-style-image: none;list-style-type: none;}
-li, p {}
-h1 {font-size:14px;}
-h2, h3, h4, h5 {font-weight:normal;display:inline;text-align:left;}
-form {display: inline;}
-input {font-family: Tahoma, Arial;font-size: 12px;padding: 2px;}
+a.psvr { color:#013155; text-decoration: none;}
+a.psvr:link {color: #013155;text-decoration: none;}
+a.psvr:visited {color: #013155;text-decoration: none;}
+a.psvr:hover {color: #ff8800;text-decoration: none;}
+a.psvr:active {color: #0000FF;text-decoration: none;}
+img.psvr {vertical-align: middle;border: 0px;}
+ul.psvr {list-style-image: none;list-style-type: none;}
+li.psvr, p.psvr {}
+h1.psvr {font-size:14px;}
+h2.psvr, h3.psvr, h4.psvr, h5.psvr {font-weight:normal;display:inline;text-align:left;}
+form.psvr {display: inline;}
+input.psvr {font-family: Tahoma, Arial;font-size: 12px;padding: 2px;}
 input.psvr_text {height: 16px;padding: 1px;color: #000000;border: 1px solid #CCCCCC;background-color: #F9F9F9;}
 input.psvr_button {height: 20px;color: #000000;border: 1px solid #999999;border-top: 1px solid #CCCCCC;border-left: 4px solid #CCCCCC;background: #FFFFFF;}
-textarea {font-family: Tahoma, Arial;color: #000000;height: 100px;width: 200px;}
-select {}
+textarea.psvr {font-family: Tahoma, Arial;color: #000000;height: 100px;width: 200px;}
+select.psvr {}
 span.psvr_newstime {float:right;margin-left: 2px;color:#666;}
-.bt {}
 
 /*全局大框*/
 #psvr_wrap {}
