therapy done, 开始融合css

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -1,7 +1,6 @@
-.psvr * {margin:0;padding:0}
-.psvr {
+.psvrsub * {margin:0;padding:0}
+.psvrsub {
 font-size: 12px;font-family:Arial;text-align:center;line-height:22px;color: #555;
-padding:18px 0;
 }
 a.psvr { color:#013155; text-decoration: none;}
 a.psvr:link {color: #013155;text-decoration: none;}
@@ -217,6 +216,7 @@ span.psvr_newstime {float:right;margin-left: 2px;color:#666;}
 
 /* footer style */
 #psvr_footer { overflow:hidden; margin:0 auto; padding:6px 0; text-align:center; line-height:20px; }
+  .psvr_copyright {padding-bottom:4px;}
 	.psvr_copyright, .psvr_copyright a { color:#666;}
 	#psvr_footer_top { height:50px; margin-bottom:10px; background:#EEE; }
 		.psvr_good_link { float:left; width:100%; overflow:hidden; margin:15px 0 0 10px; color:#369; text-align:left; }
@@ -315,13 +315,17 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
 	#psvr_login .psvr_box_r li a { color:#2C629E; }
 	.psvr_box_l { float:left; }
 .psvr_box_r { float:right; }
-#psvr_logimg{padding-top:4px}
+#psvr_logimg{padding-top:3px}
 
 .ie6{
 #psvr_wrapper {
   width:950px;
 }
+#psvr_header, #psvr_midder, #psvr_footer{
+  padding-right: 0;
+}
+#psvr_navmenu a.psvr_now{margin-right:1px}
 .psvr_menu_in{margin-top:-14px;}
-.psvr_div_1 {width: 455px;}
-.psvr_div_2 {width: 455px;}
+.psvr_div_1 {width: 462px;}
+.psvr_div_2 {width: 462px;}
 }
