--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+  <div class="psvrsub">
   <!--背景图片 拉伸效果-->
   <script language="javascript">
     if(typeof document.compatMode!='undefined'&&document.compatMode!='BackCompat'){
@@ -91,6 +91,7 @@
 
 </div><!--footer end-->
 </div></div>
+</div>
 
 <%= javascript_include_tag "application" %>
 <script type="text/javascript" charset="utf-8">
