--- a/sub/app/assets/stylesheets/application.css.scss.erb
+++ b/sub/app/assets/stylesheets/application.css.scss.erb
@@ -13,6 +13,7 @@
  */
 body{
   background: url("<%= asset_path 'loading.gif'%>") repeat scroll 0 0 #f9f9f9;
+  padding:8px 0;
 }
 .psvr_bgimg { border:0px; width:100%; height:100%;}
 .psvr_bgscroll{
