子站搜索条

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -19,6 +19,9 @@ input.psvr_button {height: 20px;color: #000000;border: 1px solid #999999;border-
 textarea.psvr {font-family: Tahoma, Arial;color: #000000;height: 100px;width: 200px;}
 select.psvr {}
 span.psvr_newstime {float:right;margin-left: 2px;color:#666;}
+table.psvr{
+  border-collapse:separate;
+}
 
 /*全局大框*/
 #psvr_wrap {}
@@ -33,7 +36,7 @@ span.psvr_newstime {float:right;margin-left: 2px;color:#666;}
   width: 968px;text-align: left;margin: 0 auto;
 }
 #psvr_header, #psvr_midder, #psvr_footer {padding: 0px 15px;}
-#psvr_header {margin-bottom: 10px;padding-top:5px;} /*默认10px 导航下方间隔*/
+#psvr_header {margin-bottom: 54px;padding-top:5px;} /*默认10px 导航下方间隔*/
 #psvr_midder {}
 #psvr_footer {}
 
@@ -316,16 +319,29 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
 	.psvr_box_l { float:left; }
 .psvr_box_r { float:right; }
 #psvr_logimg{padding-top:3px}
-
+.psvr_wtf_scbar{
+  width:937px;
+  margin-left:15px;
+  position:absolute;
+  _position:absolute;
+  top:147px;
+}
+.psvr_wtf_scbar_txt{width:268px !important;}
 .ie6{
+.psvr_wtf_scbar_txt{width:260px !important;}
 #psvr_wrapper {
-  width:950px;
+  width:958px;
+}
+.psvr_wtf_scbar{
+  top:148px;
+  margin-left:10px;
+  width:941px;
 }
 #psvr_header, #psvr_midder, #psvr_footer{
   padding-right: 0;
 }
 #psvr_navmenu a.psvr_now{margin-right:1px}
 .psvr_menu_in{margin-top:-14px;}
-.psvr_div_1 {width: 462px;}
 .psvr_div_2 {width: 462px;}
 }
+
