--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -13,14 +13,87 @@
 <meta name="copyright" content="<%= Time.now.year %> Kejian.TV Ltd." />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 <meta http-equiv="imagetoolbar" content="no" />
-<!--<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_common.css" />
-<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_forum_index.css" />-->
-<script src="simple/psvr/modernizr.js" type="text/javascript" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_common.css" />
+<link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_forum_index.css" />
+<script src="/simple/static/js/common.js" type="text/javascript"></script>
+<script src="/simple/static/js/forum.js" type="text/javascript"></script>
+<script src="/simple/psvr/modernizr.js" type="text/javascript" type="text/javascript"></script>
 <%= stylesheet_link_tag "application", :media => "all" %>
 <%= csrf_meta_tags %>
 </head>
+<!--style="position:absolute;top:18px;margin-left:620px">-->
+<body onkeydown="if(event.keyCode==27) return false;">
+  <div id="append_parent"></div><div id="ajaxwaitid"></div>
+  <div id="hd">
+    <div class="wp">
+      <div class="cl" id="mu"></div>
+      <div class="cl psvr_wtf_scbar" id="scbar">
+        <form target="_blank" action="/simple/search.php?searchsubmit=yes" onsubmit="searchFocus($('scbar_txt'))" autocomplete="off" method="post" id="scbar_form">
+          <input type="hidden" value="forum" id="scbar_mod" name="mod">
+          <input type="hidden" value="8b815768" name="formhash">
+          <input type="hidden" value="title" name="srchtype">
+          <input type="hidden" value="" name="srhfid">
+          <input type="hidden" value="forum::index" name="srhlocality">
+          <table cellspacing="0" cellpadding="0">
+            <tbody><tr>
+                <td class="scbar_icon_td"></td>
+                <td class="scbar_txt_td"><input type="text" speech="" x-webkit-speech="" autocomplete="off" value="请输入搜索内容" id="scbar_txt" name="srchtxt" class="psvr_wtf_scbar_txt xg1" placeholder="请输入搜索内容"></td>
+                <td class="scbar_type_td"><a hidefocus="true" onclick="showMenu(this.id)" class="showmenu xg1 xs2" id="scbar_type" href="javascript:;">帖子</a></td>
+                <td class="scbar_btn_td"><button value="true" class="pn pnc" sc="1" id="scbar_btn" name="searchsubmit" type="submit"><strong class="xi2 xs2">搜索</strong></button></td>
+                <td class="scbar_hot_td">
+                  <div id="scbar_hot">
+                    <strong class="xw1">热搜: </strong>
 
-<body>
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%95%99%E8%82%B2%E5%BF%83%E7%90%86%E5%AD%A6&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">教育心理学</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%A9%AC%E5%85%8B%E6%80%9D&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">马克思</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%AF%9B%E6%B3%BD%E4%B8%9C&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">毛泽东</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%AB%98%E7%AD%89%E6%95%B0%E5%AD%A6&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">高等数学</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E7%89%A9%E7%90%86&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">物理</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E8%BF%91%E4%BB%A3%E5%8F%B2&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">近代史</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E6%95%B0%E5%AD%A6%E5%88%86%E6%9E%90&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">数学分析</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E9%AB%98%E7%AD%89%E4%BB%A3%E6%95%B0&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">高等代数</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=%E5%A4%A7%E5%AD%A6%E8%8B%B1%E8%AF%AD&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">大学英语</a>
+
+
+
+                    <a sc="1" class="xi2" target="_blank" href="/simple/search.php?mod=forum&amp;srchtxt=C%E8%AF%AD%E8%A8%80&amp;formhash=c6feb795&amp;searchsubmit=true&amp;source=hotsearch">C语言</a>
+
+                  </div>
+                </td>
+              </tr>
+          </tbody></table>
+        </form>
+      </div>
+      <ul style="display: none;" class="p_pop" id="scbar_type_menu"><li><a class="curtype" rel="forum" href="javascript:;">帖子</a></li><li><a rel="user" href="javascript:;">用户</a></li></ul>
+      <script type="text/javascript">
+        initSearchmenu('scbar', '', '/simple/search.php?searchsubmit=yes');
+      </script>
+    </div>
+  </div>
   <div class="psvrsub">
   <!--背景图片 拉伸效果-->
   <script language="javascript">
@@ -36,9 +109,6 @@
 
 <div class="psvr_bgscroll" id="ktv_bg_container">
 </div>
-
-<div id="psvr_append_parent"></div>
-<div id="psvr_ajaxwaitid"></div>
 
 <div id="psvr_wrap">
 <div id="psvr_wrapper">
@@ -92,7 +162,10 @@
 </div><!--footer end-->
 </div></div>
 </div>
-
+<div id="ft" class="wp cl" style="padding:0;border:none">
+<span id="scrolltop" onclick="window.scrollTo('0','0')">回顶部</span>
+<script type="text/javascript">_attachEvent(window, 'scroll', function(){showTopLink();});</script>
+</div>
 <%= javascript_include_tag "application" %>
 <script type="text/javascript" charset="utf-8">
   jQuery(function(){
