--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -15,6 +15,25 @@
 <meta http-equiv="imagetoolbar" content="no" />
 <link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_common.css" />
 <link rel="stylesheet" type="text/css" href="/simple/data/cache/style_1_forum_index.css" />
+<script type="text/javascript">
+  var STYLEID = '1',
+      STATICURL = '/simple/static/',
+      IMGDIR = '/simple/static/image/common',
+      VERHASH = 'tFF',
+      charset = 'utf-8',
+      discuz_uid = '<%= user_signed_in? ? current_user.uid : 0 %>',
+      cookiepre = '6tce_2132_',
+      cookiedomain = 'cnu.kejian.tv',
+      cookiepath = '/',
+      showusercard = '1',
+      attackevasive = '0',
+      disallowfloat = 'newthread',
+      creditnotice = '1|威望|,2|金钱|,3|贡献|',
+      defaultstyle = '',
+      REPORTURL = <%=raw Base64.encode64("http://cnu.kejian.tv#{request.path}").gsub("\n",'').to_json%>,
+      SITEURL = 'http://cnu.kejian.tv/',
+      JSPATH = '/simple/static/js/';
+</script>
 <script src="/simple/static/js/common.js" type="text/javascript"></script>
 <script src="/simple/static/js/forum.js" type="text/javascript"></script>
 <script src="/simple/psvr/modernizr.js" type="text/javascript" type="text/javascript"></script>
@@ -26,6 +45,42 @@
   <div id="append_parent"></div><div id="ajaxwaitid"></div>
   <div id="hd">
     <div class="wp">
+      <div class="hdc cl" style="position:absolute;top:35px;margin-left:604px">
+
+        <script src="/simple/static/js/logging.js?tFF" type="text/javascript"></script>
+        <form method="post" autocomplete="off" id="lsform" action="/simple/member.php?mod=logging&amp;action=login&amp;loginsubmit=yes&amp;infloat=yes&amp;lssubmit=yes" onsubmit="return lsSubmit();">
+          <div class="fastlg cl">
+            <span id="return_ls" style="display:none"></span>
+            <div class="pns">
+              <table cellspacing="0" cellpadding="0">
+                <tr>
+                  <td>
+                    <span class="ftid">
+                      <select name="fastloginfield" id="ls_fastloginfield" width="40" tabindex="900">
+                        <option value="username">用户名</option>
+                        <option value="uid">UID</option>
+                        <option value="email">Email</option>
+                      </select>
+                    </span>
+                    <script type="text/javascript">simulateSelect('ls_fastloginfield')</script>
+                  </td>
+                  <td><input type="text" name="username" id="ls_username" autocomplete="off" class="px vm" tabindex="901" /></td>
+                  <td class="fastlg_l"><label for="ls_cookietime"><input type="checkbox" name="cookietime" id="ls_cookietime" class="pc" value="2592000" tabindex="903" />自动登录</label></td>
+                  <td>&nbsp;<a href="javascript:;" onclick="showWindow('login', '/simple/member.php?mod=logging&action=login&viewlostpw=1')">找回密码</a></td>
+                </tr>
+                <tr>
+                  <td><label for="ls_password" class="z psw_w">密码</label></td>
+                  <td><input type="password" name="password" id="ls_password" class="px vm" autocomplete="off" tabindex="902" /></td>
+                  <td class="fastlg_l"><button type="submit" class="pn vm" tabindex="904" style="width: 75px;"><em>登录</em></button></td>
+                  <td>&nbsp;<a href="/simple/member.php?mod=register" class="xi2 xw1">立即注册</a></td>
+                </tr>
+              </table>
+              <input type="hidden" name="quickforward" value="yes" />
+              <input type="hidden" name="handlekey" value="ls" />
+            </div>
+          </div>
+        </form>
+      </div>
       <div class="cl" id="mu"></div>
       <div class="cl psvr_wtf_scbar" id="scbar">
         <form target="_blank" action="/simple/search.php?searchsubmit=yes" onsubmit="searchFocus($('scbar_txt'))" autocomplete="off" method="post" id="scbar_form">
@@ -128,8 +183,8 @@
               <li class="psvr" style="height:37px">&nbsp;</li>
               <li class="psvr" ><a class="psvr <%= '/'==request.path ? 'psvr_now' : ''%>" href="/"><span class="psvr" >首页</span></a></li>
               <li class="psvr" ><a class="psvr <%= '/courses'==request.path ? 'psvr_now' : ''%>" href="<%=courses_path%>"><span class="psvr" >本学期课程</span></a></li>
-           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/countdown.html"><span class="psvr" >全部老师</span></a></li>
-           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/summary.html"><span class="psvr" >上传龙虎榜</span></a></li>
+           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/countdown.html"><span class="psvr" >全部课程</span></a></li>
+           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/summary.html"><span class="psvr" >牛人龙虎榜</span></a></li>
            <li class="psvr" ><a class="psvr" href="bbs.ttmeiju.com/forum-49-1.html"><span class="psvr" >过科攻略</span></a></li>
            <li class="psvr" ><a class="psvr" href="bbs.ttmeiju.com" title="求助" target="_blank"><span class="psvr" >求助</span></a></li>
            <li class="psvr" ><a class="psvr" href="http://kejian.tv" title="返回主站" target="_blank"><span class="psvr" >返回主站</span></a></li>
@@ -140,6 +195,25 @@
 </div>
 
 <!--header end-->
+
+<% if !notice.blank? %>
+  <p class="flash notice"><%=raw notice %></p>
+  <%= content_for :butt2 do %>
+      $("#sdk_flashes .notice").fadeOut().fadeIn();
+  <% end %>
+<% end %>
+<% if !alert.blank? %>
+  <p class="flash alert"><%=raw alert %></p>
+  <%= content_for :butt2 do %>
+      $("#sdk_flashes .alert").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
+  <% end %>
+<% end %>
+<% if !flash[:insuf_info].blank? %>
+  <p class="flash warning"><%=raw flash[:insuf_info] %></p>
+  <%= content_for :butt2 do %>
+      $("#sdk_flashes .warning").fadeOut('fast').fadeIn('fast').fadeOut('fast').fadeIn('fast');
+  <% end %>
+<% end %>
 
 <%= yield %>
 
