--- a/sub/app/views/welcome/index.html.erb
+++ b/sub/app/views/welcome/index.html.erb
@@ -36,6 +36,7 @@
               <tr bgcolor="#f1f1f1">
                 <td height="28" colspan="6" align="left"><h3 class="psvr" ><%=l Date.today, :format => :long%> 上传</h3></td>
               </tr>
+<% if @coursewares1.count>0 %>
               <tr bgcolor="#fafafa" align="center">
                 <td width="5%" align="center">序号</td>
                 <td align="left">名字</td>
@@ -47,7 +48,6 @@
  
 
 <!--seed_today-->
-<% if @coursewares1.count>0 %>
 <%@coursewares1.each_with_index do |cw,index|%> 
     <%ins = Courseware.where(tid:cw.tid).first%>
     <%cc=Course.where(fid:cw.fid).first%>
@@ -76,7 +76,7 @@
 <% end %>
 <% else %>
    <tr bgcolor="#ffffff" align="center">
-     <td colspan="6">
+     <td colspan="6" style="padding:22px 0">
        今天还没有人上传课件，<a href="#">[点击这里]</a>上传一个吧!
      </td>
    </tr>
