--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -181,11 +181,11 @@
           <div class="psvr_menu" id="psvr_navmenu"><ul class="psvr" >
               <li class="psvr" style="height:37px">&nbsp;</li>
               <li class="psvr" ><a class="psvr <%= '/'==request.path ? 'psvr_now' : ''%>" href="/"><span class="psvr" >首页</span></a></li>
-              <li class="psvr" ><a class="psvr <%= '/courses'==request.path ? 'psvr_now' : ''%>" href="<%=courses_path%>"><span class="psvr" >本学期课程</span></a></li>
-           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/countdown.html"><span class="psvr" >本学期未开</span></a></li>
-           <li class="psvr" ><a class="psvr" href="www.ttmeiju.com/summary.html"><span class="psvr" >牛人龙虎榜</span></a></li>
-           <li class="psvr" ><a class="psvr" href="bbs.ttmeiju.com/forum-49-1.html"><span class="psvr" >过科攻略</span></a></li>
-           <li class="psvr" ><a class="psvr" href="bbs.ttmeiju.com" title="求助" target="_blank"><span class="psvr" >求助</span></a></li>
+              <li class="psvr" ><a class="psvr <%= '/courses'==request.path ? 'psvr_now' : ''%>" href="/courses"><span class="psvr" >本学期课程</span></a></li>
+           <li class="psvr" ><a class="psvr" href="/un_courses"><span class="psvr" >本学期未开</span></a></li>
+           <li class="psvr" ><a class="psvr" href="/users"><span class="psvr" >牛人龙虎榜</span></a></li>
+           <li class="psvr" ><a class="psvr" href="/articles"><span class="psvr" >过科攻略</span></a></li>
+           <li class="psvr" ><a class="psvr" href="/for_help" title="求助"><span class="psvr" >求助</span></a></li>
            <li class="psvr" ><a class="psvr" href="http://kejian.tv" title="返回主站" target="_blank"><span class="psvr" >返回主站</span></a></li>
 </ul>
           </div>
