--- a/sub/app/assets/stylesheets/for_help/application.css.erb
+++ b/sub/app/assets/stylesheets/for_help/application.css.erb
@@ -2,14 +2,14 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require reset
- *= require css
- *= require main
- *= require sidebar
- *= require user
- *= require facebox
- *= require jquery.zlzp.editor
- *= require jquery.zlzp.popupdiv.css
+ *= require ./reset
+ *= require ./css
+ *= require ./main
+ *= require ./sidebar
+ *= require ./user
+ *= require ./facebox
+ *= require ./jquery.zlzp.editor
+ *= require ./jquery.zlzp.popupdiv.css
  *= require_self
  */
 
