--- a/sub/app/views/layouts/for_help.html.erb
+++ b/sub/app/views/layouts/for_help.html.erb
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<!--[if lt IE 7]> <html class="no-js ie_all ie6" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie_all ie7" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie_all ie8" lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="no-js ie_all ie9" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+    <meta http-equiv="imagetoolbar" content="no" />
     <meta name="viewport" content="width=960"/>
     <meta http-equiv="x-dns-prefetch-control" content="off"/>
     <meta name="keywords" content="" />
@@ -16,6 +22,7 @@
     <%= javascript_include_tag "for_help/html5" %>
     <![endif]-->
     <%= stylesheet_link_tag "for_help/application" %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
     <!--[if IE 8 ]>
       <link href="/css_ie8.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
@@ -25,55 +32,25 @@
     <%= flash[:extra_ucenter_operations] %>
   </head>
 
-  <body data-subdomain="<%= request.subdomain %>">
-    <header id="pageHeader">
-      <section class="wrapper">
-        <a class="sitelogo" title="回到首页" href="<%= user_signed_in? ? '/root' : '/'%>"></a>
-        <% @no_sidebar ||= ['devise-sessions_new','registrations_new'].include?("#{params[:controller].parameterize}_#{params[:action].parameterize}") %>
-        <% @no_header ||= ['devise-sessions_new','registrations_new'].include?("#{params[:controller].parameterize}_#{params[:action].parameterize}") %>
-        <% unless @no_header %>
-          <div class="searchbox">
-            <input placeholder="搜索解题、领域疑问" id="searchInput">
-          </div>
-          <%= content_for :butt2 do %>
-            Asks.completeAll($("#searchInput"));
+<body data-subdomain="<%= request.subdomain %>">
+  <div class="psvrsub">
+  <!--背景图片 拉伸效果-->
+  <script language="javascript">
+    if(typeof document.compatMode!='undefined'&&document.compatMode!='BackCompat'){
+        cot_t1_DOCtp="_top:expression(document.documentElement.scrollTop+document.documentElement.clientHeight-this.clientHeight);_left:expression(document.documentElement.scrollLeft + document.documentElement.clientWidth - offsetWidth);}";
+    }else{
+        cot_t1_DOCtp="_top:expression(document.body.scrollTop+document.body.clientHeight-this.clientHeight);_left:expression(document.body.scrollLeft + document.body.clientWidth - offsetWidth);}";
+    }
+    var fdcCSS='.psvr_bgscroll {';
+    var fdcCSS=fdcCSS+cot_t1_DOCtp;
+    document.write('<style type=\"text\/css\">'+fdcCSS+'<\/style>');
+  </script>
 
-            $(' .pager a.disabled').click(function(){
-            return false;
-            });
-          <% end %>
+  <div class="psvr_bgscroll" id="ktv_bg_container">
+  </div>
+  </div>
 
 
-          <button class="btnGoAsk" onclick="return Asks.addAsk()" href="/asks/new"></button>
-          <div class="userHomepage"><a href="/" title="回到首页"><%= current_user ? '首页' : '随便看看' %></a></div>
-
-          <% if !current_user %>
-            <div class="userInfoName">
-              <a href="<%= Setting.zhaopin_login+CGI::escape('http://'+Setting.wendao_domain_name+request.path) %>"  id="login_link">登录</a>&nbsp;&nbsp;
-              <a href="http://my.kejian.tv/loginmgr/regist_serviceitem.asp?f=l&redirect_url=<%= CGI::escape('http://'+Setting.wendao_domain_name+request.path) %>" id="reg_link">注册</a>
-            </div>
-          <% else %>
-            <% if current_user.notifications.nondeleted.unread.count > 0 %>
-              <div class="userNotify englishFont"><%=current_user.notifications.nondeleted.unread.count%></div>
-            <% end %>
-            <div class="userInfoName" style="width:130px;left:824px;"><%=truncate2(current_user.name,:length => 12,:omission=>'…') %><cite class="arrowDown"></cite></div>
-
-            <menu class="userInfoPop hide" id="userInfoPop" >
-              <ul>
-                <li class="username"><%=truncate2(current_user.name,:length => 12,:omission=>'…') %><cite class="arrowDown"></cite></li>
-                <li class="blackline"></li>
-                <li><span class="homepage"></span><a href="/users/<%= (current_user.slug) %>">个人主页</a></li>
-                <li class="blackline"></li>
-                <li><span class="setup"></span><%= link_to('设置', edit_user_registration_path) %></li>
-                <li class="blackline"></li>
-                <li><span class="logout"></span><a href="http://my.kejian.tv/loginmgr/logout.asp?strBkUrl=http://<%= request.host_with_port %>/" id="logout_link">退出</a></li>
-              </ul>
-            </menu>
-          <% end %>
-        <% end %>
-      </section>
-    </header>
-    <div class="clearfix height0"></div>
     <% if @raw_raw_raw %>
       <%= yield %>
     <% else %>
@@ -122,31 +99,12 @@
       </section>
 
     <% end %>
-    <footer id="pagerFooter" class="mt20">
-      <a href="http://special.kejian.tv/sh/2009/aboutus/about.html" target="_blank">课件交流系统介绍</a> |
-      <!--<a href="http://special.kejian.tv/sh/2009/aboutus/join.html" target="_blank">加入课件交流系统</a> |-->
-      <a href="http://special.kejian.tv/sh/2009/aboutus/law.html" target="_blank">法律声明</a> |
-      <a href="http://special.kejian.tv/sh/2009/aboutus/secrecy.html" target="_blank">保密承诺</a> |
-      <!--<a href="http://my.kejian.tv/loginmgr/regist_serviceitem.asp?f=b" target="_blank">个人注册</a> | -->
-      <a href="http://kejian.tv/agreement" target="_blank">Kejian.TV协议</a> |
-      <a href="http://special.kejian.tv/sh/2009/aboutus/contact.html" target="_blank">联系方式</a> |
-      <a href="/bugtrack" target="_blank">意见反馈</a> |
-      <a href="http://kejian.tv/mobile" target="_blank">手机Kejian.TV</a>
-      <!--<a href="http://api.kejian.tv/apidoc" target="_blank">开放API</a>-->
-      <!--<a href="http://article.kejian.tv/pub/ch.jsp?cid=1237" target="_blank">媒体报道</a>-->
-      <div class="copyright">
-        Copyright &copy; kejian.tv All Rights Reserved.
-      </div>
-    </footer>
-    <div class="backToZp">
-      <a href="http://www.kejian.tv/" target="_blank"><img src="<%= asset_path('zhaopin.png') %>" width="38" height="123" /></a>
-    </div>
 
     <div id="hidden_new_ask" style="display: none;">
       <form action="/asks" method="post" id="inner_new_ask">
         <%= auth_token %>
         <header>
-          创建新题
+          创建新问题
           <a class="close"  onclick="$.facebox.close(); return false;"></a>
         </header>
         <section>
@@ -165,7 +123,7 @@
         </section>
         <input type="hidden" name="topics" value="">
         <footer>
-          <div class="btnNormalGreen bold mt20 submit rightbtn"><span>发布题</span></div>
+          <div class="btnNormalGreen bold mt20 submit rightbtn"><span>发布问题</span></div>
         </footer>
       </form>
     </div>
@@ -197,6 +155,7 @@
     </div>
 
     <%= yield :bottom %>
+    <%= javascript_include_tag "application" %>
     <%= javascript_include_tag "for_help/application" %>
     <%= yield :scripts %>
     <script type="text/javascript" charset="utf-8">
@@ -213,5 +172,5 @@
       <% end %>
     </script>
     <%= yield :butt %>
-  </body>
+</body>
 </html>
