求助背景搞定

--- a/sub/app/views/layouts/for_help.html.erb
+++ b/sub/app/views/layouts/for_help.html.erb
@@ -46,8 +46,7 @@
     document.write('<style type=\"text\/css\">'+fdcCSS+'<\/style>');
   </script>
 
-  <div class="psvr_bgscroll" id="ktv_bg_container">
-  </div>
+  <%= render 'ktv_bg_container' %>
   </div>
 
 
