--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -160,9 +160,7 @@
     var fdcCSS=fdcCSS+cot_t1_DOCtp;
     document.write('<style type=\"text\/css\">'+fdcCSS+'<\/style>');
   </script>
-
-<div class="psvr_bgscroll" id="ktv_bg_container">
-</div>
+  <%= render 'ktv_bg_container' %>
 
 <div id="psvr_wrap">
 <div id="psvr_wrapper">
