艰难的css修复

--- a/sub/app/assets/stylesheets/__sub.css.scss.erb
+++ b/sub/app/assets/stylesheets/__sub.css.scss.erb
@@ -24,8 +24,8 @@ table.psvr{
 }
 
 /*全局大框*/
-#psvr_wrap {}
-#psvr_wrapper {
+.psvr_wtf_wrap {}
+.psvr_wtf_wrapper {
   background: white;
 /*
   background: rgb(255, 255, 255);
@@ -324,23 +324,19 @@ input.psvr_bt {width: 56px;height: 23px;background:url(<%=asset_path('extand_ima
   margin-left:15px;
   position:absolute;
   _position:absolute;
-  top:147px;
+  top:137px;
 }
 
-  .psvr_wtf_scbar_txt{width:268px !important;}
 .ie7{
   .psvr_menu_in{margin-top:27px;}
 }
 .ie6{
-  .psvr_wtf_scbar_txt{width:260px !important;}
   .psvr_wtf_logindiv{width:350px}
   #psvr_wrapper {
     width:958px;
   }
   .psvr_wtf_scbar{
-    top:148px;
-    margin-left:10px;
-    width:941px;
+    top:138px;
   }
   #psvr_header, #psvr_midder, #psvr_footer{
     padding-right: 0;
