--- a/sub/app/assets/stylesheets/for_help/application.css.erb
+++ b/sub/app/assets/stylesheets/for_help/application.css.erb
@@ -96,3 +96,7 @@
 .hidden{
   display:none;
 }
+#scbar_ppp{
+  height: 44px; border: solid #E5EDF2; border-width: 0 1px 1px; background:url("/simple/static/image/common/search.png") repeat-x 0 0; line-height: 44px; overflow: hidden; 
+}
+.cl_ppp:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; } .cl_ppp { zoom: 1; }
