--- a/sub/app/views/layouts/for_help.html.erb
+++ b/sub/app/views/layouts/for_help.html.erb
@@ -89,6 +89,17 @@
 <div class="psvr_wtf_wrap" style="<%= @is_ie8 ? 'margin-top:-20px' : ''%>">
   <div class="psvr_wtf_wrapper" style="<% if @is_ie6 %>width:953px;padding-right:17px;padding-left:18px<% end %>">
     <div style="width:936px;<%= @is_ie6 || @is_ie7 ? 'margin-left:0' : '' %>" id="scbar_ppp" class="cl_ppp psvr_wtf_scbar">
+      　欢迎来到首都师范大学问答求助区！目前共有<%=link_to Ask.count,'/asks'%>个问题，其中<%=link_to Ask.unanswered.count,'/zero_asks'%>个还悬而未决，欢迎贡献答案或提出问题！
+      <%= content_for :butt2 do %>
+        Asks.completeAll($("#searchInput"));
+
+        $(' .pager a.disabled').click(function(){
+        return false;
+        });
+
+        $('.btnGoAsk').click(function(){return Asks.addAsk();});
+      <% end %>
+      <button class="btnGoAsk" href="/asks/new"></button>
     </div>
     <% if @raw_raw_raw %>
       <%= yield %>
